# airgradient_esphome

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yamlfmt  CLAUDE.md  CONTRIBUTING.md  README.md  airgradient-one.yaml  airgradient-open-air.yaml  devices.yaml  index.html  packages.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-firmware.yml  pre-commit.yml  validate.yml
airgradient-one/: manifest.json
airgradient-open-air/: manifest.json
components/sgp4x/: sensor.py  sgp4x.cpp  sgp4x.h
docs/: display.md  firmware.md  led.md
examples/: all-sensors-no-display.yaml  minimal-co2-temp.yaml
full_config/: ag-one.yaml
scripts/: build_landing_page.py  build_manifest.py
