[project]
name = "airgradient-esphome-firmware"
version = "0.0.0"
description = "ESPHome firmware build pipeline for AirGradient devices (Made for ESPHome)."
readme = "README.md"
requires-python = ">=3.11,<3.15"

# ESPHome is the one required runtime dep for building firmware. The `==`
# (exact version) specifier pins to the 2026.4.x line and ensures
# reproducible builds. Bump deliberately after verifying a new minor
# release compiles every device in devices.yaml.
dependencies = [
    "esphome==2026.5.0",
    # Used by scripts/ to parse devices.yaml and build the landing page.
    "pyyaml == 6.0.3",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# Ships YAML + workflows + scripts, not an importable package.
py-modules = []

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "double"
